@@ -21,7 +21,7 @@
                 },
                 "message": {
                    "description": "The original error message.",
-                   "type": "string"
+                   "type": ["string", "null"]
                 },
                 "module": {
                     "description": "Describes the exception type's module namespace.",
@@ -47,7 +47,9 @@
                     "description": "Indicator whether the error was caught somewhere in the code or not."
                 }
             },
-            "required": ["message"]
+            "anyOf": [
+                {"required": ["message"]},{"required": ["type"]}
+            ]
         },
         "log": {
             "type": ["object", "null"],
